The prev and next fix
The prev and next buttons are now invisible by default and become visible on hover of slideshowContainer

--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@
   width: auto;
   padding: 16px;
   margin-top: -22px;
-  color: white;
+  color: rgba(0,0,0,0);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -116,9 +116,10 @@
   border-radius: 3px 0 0 3px;
 }
 
-.prev:hover, .next:hover {
+/*.prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
-}
+  color: white;
+}*/
 
 /*#dot1
 {
